@@ -15,14 +15,6 @@
 		<relativePath />
 	</parent>
 
-	
-	 <distributionManagement>
-		<repository>
-			<id>finapplicationdevelopment-snapshots</id>
-			<url>https://pkgs.dev.azure.com/FinApplicationDevelopment/_packaging/finapplicationdevelopment-snapshots/maven/v1</url>
-		</repository>
-	</distributionManagement>
-
 	<repositories>
 		<repository>
 			<id>finapplicationdevelopment-snapshots</id>
@@ -115,9 +107,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<argLine>
-						--illegal-access=permit
-					</argLine>
+					<forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m --illegal-access=permit</argLine>
 				</configuration>
 			</plugin>
 
@@ -130,7 +122,15 @@
 					</argLine>
 				</configuration>
 			</plugin>
+			
 		</plugins>
 	</build>
+
+	<distributionManagement>
+    	<site>
+      		<id>magex</id>
+      		<url>https://github.com/magex9/api-java/</url>
+    	</site>
+  	</distributionManagement>
 
 </project>
